[gd_scene load_steps=4 format=3 uid="uid://b8wp3rxn0ub47"]

[ext_resource type="Script" path="res://gameover.gd" id="1_7dxrh"]
[ext_resource type="AudioStream" uid="uid://kvcl14ym71rg" path="res://Music/Scream.mp3" id="2_3al6y"]
[ext_resource type="Texture2D" uid="uid://bnumlie4r1rl6" path="res://Art/Sola_Death.png" id="3_pl07e"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_7dxrh")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1153.0
offset_bottom = 649.0
color = Color(0.490196, 0, 0.0392157, 1)

[node name="Scream" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_3al6y")

[node name="SolaDeath" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.478431)
position = Vector2(576, 214)
scale = Vector2(0.446045, 0.423584)
texture = ExtResource("3_pl07e")

[node name="Label" type="Label" parent="."]
offset_left = 144.0
offset_top = 98.0
offset_right = 1010.0
offset_bottom = 308.0
theme_override_font_sizes/font_size = 151
text = "GAME OVER"

[node name="RetryButton1" type="Button" parent="."]
offset_left = 512.0
offset_top = 420.0
offset_right = 676.0
offset_bottom = 474.0
text = "Retry from level 1"

[node name="RetryButton2" type="Button" parent="."]
offset_left = 512.0
offset_top = 484.0
offset_right = 676.0
offset_bottom = 538.0
text = "Retry from this level"

[node name="MenuButton" type="Button" parent="."]
offset_left = 512.0
offset_top = 548.0
offset_right = 676.0
offset_bottom = 602.0
text = "Back to Main"

[connection signal="pressed" from="RetryButton1" to="." method="_on_button_pressed"]
[connection signal="pressed" from="RetryButton2" to="." method="_on_retry_button_2_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
